# API_HH

./: .gitignore  pyproject.toml  test.json
data/: vacancies.json
src/: api_service.py  json_storage.py  vacancy.py
tests/: test_api_service.py  test_json_storage.py  test_user_funcs.py  test_vacancy.py
utils/: user_funcs.py  user_interaction.py
