[tool.poetry]
name = "oop-api-hh"
version = "0.1.0"
description = "A sampleoop_api_hh project"
authors = ["Dmitriy Kovaluk <kdi.86@mail.ru>"]
readme = "README.md"
packages = [{include = "oop_api_hh"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
